crates/runtime/tests/snapshots/assignment__opt_assign_none.snap
---
source: crates/vm/tests/assignment.rs
expression: snapshot
---
# Input:
v := none
v ??= 2
print v


# Result (success):
none

# Stdout:
2

