crates/runtime/tests/snapshots/assignment__pow_assign.snap
---
source: crates/vm/tests/assignment.rs
expression: snapshot
---
# Input:
v := 10
v **= 2
print v


# Result (success):
none

# Stdout:
100

